# Mon

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  SPECIFICATION.md  build.rs
gamemaker/extensions/: Mon.extension.gmx
gamemaker/scripts/: mon_metric_meters_to_inches.gml
gm/: gm.project.gmx
gm/Configs/: Default.config.gmx
gm/extensions/: Mon.extension.gmx
gm/objects/: object0.object.gmx
gm/rooms/: room0.room.gmx
gm/scripts/: mon_metric_kilograms_to_pounds.gml
mon-cli/: Cargo.toml
mon-cli/src/: display.rs  main.rs  main_experimental.rs  main_original.rs  terminal.rs
mon-gen/: Cargo.toml
mon-gen-c/: Cargo.toml
mon-gen-c/src/: element.rs  lib.rs  mod.rs  monster.rs  species.rs
mon-gen/src/: compile.rs  lib.rs  test.rs
mon-gen/src/base/: attack.rs  battle.rs  battle_exp.rs  command.rs  effect.rs  mod.rs  monster.rs  party.rs  queue.rs  replay.rs  runner.rs  species.rs  statmod.rs  types.rs  util.rs
mon-gen/src/c_api/: element.rs  monster.rs  species.rs
mon-gen/src/calculate/: common.rs  damage.rs  effects.rs  escape.rs  experience.rs  lingering.rs  mod.rs  modifier.rs  statistics.rs
mon-gen/src/gen_test/: mod.rs
mon-gen/src/types/: mod.rs
mon-gen/tests/: battle.rs  damage.rs  flow.rs  lib.rs  lingering.rs  order.rs  party.rs  queue.rs  species.rs  target.rs
mon-gm/: Cargo.toml
mon-gm/src/: element.rs  lib.rs  monster.rs  species.rs
sample/: classifiers.toml  common.toml
sample/attacks/: 000 Pound.toml  009 Scratch.toml  021 Vine Whip.toml  027 Sand Attack.toml  032 Tackle.toml  038 Tail Whip.toml  044 Growl.toml  045 Growl.toml  056 Surf.toml  081 Dragon Rage.toml  089 Fissure.toml  149 Splash.toml  150 Splash.toml  194 Perish Song.toml  282 Knock Off.toml  368 U-turn.toml  369 U-turn.toml  432 Trick Room.toml  433 Trick Room.toml  438 Power Whip.toml
sample/classifiers/: battle.toml  elements.toml  genders.toml  locations.toml  monsters.toml  species.toml
sample/elements/: 00 Bug.toml  01 Dark.toml  05 Fighting.toml  06 Fire.toml  07 Flying.toml  08 Ghost.toml  09 Grass.toml  10 Ground.toml  11 Ice.toml  12 Normal.toml  13 Poison.toml  14 Psychic.toml  15 Rock.toml  17 Water.toml  bug.toml  dragon.toml  electric.toml  fairy.toml  fighting.toml  fire.toml  flying.toml  ground.toml  normal.toml  poison.toml  rock.toml  steel.toml  water.toml
sample/functions/: calculate_stats.rs  functions.rs  functions2.rs
sample/moves/: Thunder Fang.toml
sample/species/: 000 Bulbasaur.toml  001 Bulbasaur.toml  002 Ivysaur.toml  003 Charmander.toml  006 Squirtle.toml  015 Pidgey.toml  150 Mew.toml  250 Celebi.toml  385 Deoxys.toml  386 Deoxys.toml  491 Shaymin.toml  492 Shaymin.toml
src/: lib.rs
src/base/: battle.rs  element.rs  gender_ratio.rs  mod.rs  monster.rs  resource.rs  species.rs  types.rs
src/export/: element_c.rs  (+3 more)
(+4 files in other folders)
