[package]
name = "mon"
version = "0.1.0"
authors = ["TheSpiritXIII <thespiritxiii@gmail.com>"]
build = "build.rs"

[dependencies]
num = "^0.1"
num-macros = "^0.1"
rand = "0.3"

[build-dependencies]
serde = "^0.6"
serde_macros = "^0.6"
num = "^0.1"
rusty-cheddar = "0.3.0"

[build-dependencies.toml]
version = "^0.1"
default-features = false
features = ["serde"]

[lib]
name = "mon"
crate-type = ["dylib"]
