[package]
name = "mon-gen-c"
version = "0.1.0"
authors = ["TheSpiritXIII <thespiritxiii@gmail.com>"]

[lib]
name = "mon"
crate-type = ["dylib"]

[dependencies]
num = "^0.1"
enum_primitive = "^0.1"

[dependencies.mon-gen]
path = "../mon-gen"
version = "0.3.0"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
