[package]
name = "mon-gen"
version = "0.3.0"
authors = ["TheSpiritXIII <thespiritxiii@gmail.com>"]
build = "src/compile.rs"

[features]
rebuild = []
test = []

[dependencies]
num = "^0.1"
rand = "^0.3"
custom_derive = "^0.1"
enum_derive = "^0.1"
enum_primitive = "^0.1"

[build-dependencies]
serde = "^0.7"
serde_macros = "^0.7"
num = "^0.1"
filetime = "0.1"

[build-dependencies.toml]
version = "^0.1"
default-features = false
features = ["serde"]

[lib]
