[package]
name = "mon-gen"
version = "0.4.1"
authors = ["TheSpiritXIII <thespiritxiii@gmail.com>"]
build = "src/compile.rs"

[features]
rebuild = []
c_api = []
test = []

[dependencies]
num = "^0.1"
rand = "^0.3"
custom_derive = "^0.1"
enum_derive = "^0.1"
enum_primitive = "^0.1"

[build-dependencies]
serde = "^0.8"
serde_macros = "^0.8"
num = "^0.1"
filetime = "0.1"

[build-dependencies.toml]
version = "^0.2"
default-features = false
features = ["serde"]

[lib]
