[package]
name = "mon-gen"
version = "0.4.2"
authors = ["TheSpiritXIII <thespiritxiii@gmail.com>"]
build = "src/compile.rs"

[features]
default = ["rand"]
rebuild = []
c_api = []
test = [] # TODO: `default` and `test` should be mutally exclusive.

[dependencies]
num = "^0.1"
custom_derive = "^0.1"
enum_derive = "^0.1"
enum_primitive = "^0.1"

rand = { version = "^0.3", optional = true }

[build-dependencies]
serde = "^0.8"
serde_derive = "0.8"
num = "^0.1"
filetime = "0.1"

[build-dependencies.toml]
version = "^0.2"
default-features = false
features = ["serde"]

[lib]
